--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Lost/Found Portal of IITI - LoFo</title>
+
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+
 </head>
 
 <body>
