--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <title>LoFo - IIT Indore</title>
 
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 
 </head>
 
